# etl-gcs-postgres-bigquery

./: .env.template  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: etl-pipeline-ci.yml
core/pipeline/: extract.py  load.py  transform.py
helpers/db/: __init__.py  connection.py
utils/: base_logger.py
